# glb-optimization-master

./: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/agents/: cms-expert.agent.md  mock-generator.agent.md
.serena/: project.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: optimize-glb.js
src-tauri/src/: lib.rs  main.rs
src/lib/: settings.ts  stores.ts
src/lib/components/: BatchFileListView.svelte  ComparisonReport.svelte  DownloadButton.svelte  FeatureCard.svelte  PageHeader.svelte  Preview.svelte  SettingsPanel.svelte  Upload.svelte  UploadZone.svelte
src/lib/schemas/: structureSchema.ts
src/lib/types/: structure.ts
src/lib/utils/: cameraAnimations.ts  gltfLoader.ts  gltfTransform.test.ts  gltfTransform.ts  keyboardControls.ts  modelExport.ts  modelExtraction.ts  structureImport.test.ts  structureImport.ts  treeExport.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/api/optimize/: +server.ts
src/routes/glb-optimizer/: +page.svelte
src/routes/instancing-guide/: +page.svelte
src/routes/structure-analyzer/: +page.svelte
src/routes/structure-analyzer/components/: BatchProgressOverlay.svelte  ExtractionMenu.svelte  LocationPreview.svelte  OrientationAdjuster.svelte  StructureViewer.svelte  TreeMenu.svelte  TreeNode.svelte  UploadZone.svelte
src/routes/structure-analyzer/stores/: structureStore.svelte.ts
