[package]
name = "glb-optimization-master"
version = "0.1.0"
description = "GLB Model Optimizer – Tauri Desktop App"
authors = []
edition = "2021"

[lib]
name = "glb_optimization_master_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
